Bug 516047 - crash [@ nsXULTreeGridCellAccessible::GetAttributesInternal(nsIPersistentProperties*)]. r=MarcoZ